--- a/Nuclio-Crayfish/OpenTelemetry/Operator/collector-instance.yaml
+++ b/Nuclio-Crayfish/OpenTelemetry/Operator/collector-instance.yaml
@@ -8,7 +8,7 @@ spec:
       otlp:
         protocols:
           grpc:
-          http:
+            endpoint:"0.0.0.0:4317"
     processors:
       memory_limiter:
         check_interval: 1s
@@ -17,13 +17,16 @@ spec:
       batch:
         send_batch_size: 10000
         timeout: 10s
-
     exporters:
-      debug:
-
+      logging:
+        loglevel: debug
+      otlp:
+        endpoint:"jaeger-collector.observability.svc.cluster.local:14250"
+        tls:
+          insecure: true
     service:
       pipelines:
         traces:
           receivers: [otlp]
           processors: [memory_limiter, batch]
-          exporters: [debug]
+          exporters: [debug, otlp]
